gateway-api/app1/deploy-whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app1
  name: app1
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: traefik/whoami:v1.8
        name: app1
        args:
        - --name
        - app1
        ports:
        - containerPort: 80
