gateway-api/app1/svc-whoami.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
  name: app1
  namespace: app1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1
